Eliminar codigo repetido del backend y separar responsabilidades en el alta de credito
CODIGO REPETIDO

Mapeo de entidad a DTO duplicado. El mapeo Usuario -> UsuarioResponse
estaba escrito dos veces textualmente dentro de AdminController, y la
construccion de AuthResponse dos veces dentro de AuthController. Ademas
cada servicio reimplementaba su propio mapper privado: toResponse() en
ClienteServiceImpl, CobranzaServiceImpl y CreditoServiceImpl, y
convertirADTO() en MetaCobranzaServiceImpl, es decir la misma
responsabilidad resuelta cuatro veces y con dos nombres distintos.

Se unifica llevando el mapeo a un metodo de fabrica estatico desde() en
cada DTO de respuesta. Ahora cada traduccion existe en un solo lugar y
bajo una sola convencion de nombre. Como efecto secundario, la
construccion posicional de CreditoResponse (nueve parametros) queda
confinada a un unico punto en vez de repartida por los servicios.

Consultas duplicadas en los repositorios. CobranzaRepository resolvia la
misma navegacion con dos mecanismos distintos: una derived query y una
JPQL escrita a mano. Se reemplaza la JPQL existsByCreditoId por la
derived query existsByCuotaIdIdCredito, dejando un solo mecanismo. Se
elimina CreditoRepository.countAll(), que duplicaba el count() heredado
de JpaRepository y ademas no lo usaba nadie.

Tres mecanismos de error en paralelo. Convivian las excepciones propias
del proyecto (BusinessException / ResourceNotFoundException) con
ResponseStatusException lanzada desde los servicios y con RuntimeException
pelada. Se unifica todo en las excepciones propias, que son las que
GlobalExceptionHandler traduce a codigo HTTP.

Esto corrige de paso un defecto real: como GlobalExceptionHandler declara
un @ExceptionHandler(Exception.class), capturaba tambien las
ResponseStatusException y las RuntimeException y las devolvia como 500.
Verificado contra la API levantada: anular una cobranza inexistente
devolvia 500 y ahora devuelve 404; anular un credito con cobranzas
devolvia 5