@@ -2,6 +2,7 @@ package com.uade.tpejemplo.service.impl;
 
 import com.uade.tpejemplo.service.MetaCobranzaService;
 import com.uade.tpejemplo.dto.request.MetaCobranzaRequest;
+import com.uade.tpejemplo.exception.ResourceNotFoundException;
 import com.uade.tpejemplo.model.MetaCobranza;
 import com.uade.tpejemplo.repository.MetaCobranzaRepository;
 import lombok.RequiredArgsConstructor;
@@ -9,19 +10,18 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class MetaCobranzaServiceImpl implements MetaCobranzaService {
 
-    private final MetaCobranzaRepository repository;
+    private final MetaCobranzaRepository metaCobranzaRepository;
 
     @Override
     public List<MetaCobranzaRequest> obtenerTodas() {
-        return repository.findAll().stream()
-                .map(this::convertirADTO)
-                .collect(Collectors.toList());
+        return metaCobranzaRepository.findAll().stream()
+            .map(MetaCobranzaRequest::desde)
+            .toList();
     }
 
     @Override
@@ -30,31 +30,28 @@ public class MetaCobranzaServiceImpl implements MetaCobranzaService {
         MetaCobranza meta = new MetaCobranza();
         meta.setMes(metaRequest.getMes());
         meta.setMontoObjetivo(metaRequest.getMontoObjetivo());
-        return convertirADTO(repository.save(meta));
+        return MetaCobranzaRequest.desde(metaCobranzaRepository.save(meta));
     }
 
     @Override
     @Transactional
     public MetaCobranzaRequest actualizarMeta(Long id, MetaCobranzaRequest metaRequest) {
-        MetaCobranza meta = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Meta no encontrada con ID: " + id));
-        
+        MetaCobranza meta = buscarMeta(id);
+
         meta.setMes(metaRequest.getMes());
         meta.setMontoObjetivo(metaRequest.getMontoObjetivo());
-        
-        return convertirADTO(repository.save(meta));
+
+        return MetaCobranzaRequest.desde(metaCobranzaRepository.save(meta));
     }
 
     @Override
     @Transactional
     public void eliminarMeta(Long id) {
-        if (!repository.existsById(id)) {
-            throw new RuntimeException("No se puede eliminar, meta no encontrada");
-        }
-        repository.deleteById(id);
+        metaCobranzaRepository.delete(buscarMeta(id));
     }
 
-    private MetaCobranzaRequest convertirADTO(MetaCobranza meta) {
-        return new MetaCobranzaRequest(meta.getId(), meta.getMes(), meta.getMontoObjetivo());
+    private MetaCobranza buscarMeta(Long id) {
+        return metaCobranzaRepository.findById(id)
+            .orElseThrow(() -> new ResourceNotFoundException("Meta de cobranza", "id", id));
     }
 }
